saap/saap-backend/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saapws-service
spec:
  selector:
    app: saapws-pod
  type: ClusterIP
  ports:
    - name: http
      port: 80 #porta interna
      targetPort: http #porta a aplicação
